# ChatGPT-and-LangChain-the-complete-masterclass

./: README.md  pyproject.toml
src/: main.py
src/1_pycode/: 01_start.ipynb  02_intro_to_chain.ipynb  main.ipynb  main.py
src/1_pycode/.ipynb_checkpoints/: main-checkpoint.ipynb
src/2_chatbot_memory_management/: 03_memory_management.ipynb  README.md  main.py  memory_management.py
tests/: __init__.py
