[tool.poetry]
name = "chatgptreporeader"
version = "0.1.0"
description = ""
authors = ["lukas kotatko <lukas.kotatko@heureka.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.23.4"
langchain = "^0.1.16"
python-dotenv = "^1.0.1"
langchain-openai = "^0.1.7"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
